<resources>
    <string name="app_name">Capstone Design</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_home">Home</string>


    <string name="start_btn_t">강사 전용</string>
    <string name="start_btn_p">학부모 전용</string>
    <string name="start_img_description">img</string>
    <string name="start_header_description">header</string>
    <string name="start_credit_description">credit</string>

    <string name="tl_hint_id">아이디</string>
    <string name="tl_hint_pass">비밀번호</string>
    <string name="tl_btn">로그인</string>
    <string name="tl_reg">강사 등록</string>

    <string name="rg_id">아이디</string>
    <string name="rg_pass">비밀번호</string>
    <string name="rg_pass_conf">비밀번호 확인</string>
    <string name="rg_name">이름</string>
    <string name="rg_phone">전화번호</string>
    <string name="rg_conf">인증번호</string>
    <string name="rg_phone_btn">인증 요청</string>
    <string name="rg_conf_btn">인증 확인</string>
    <string name="reg">강사 등록</string>

    <string name="pl_phone">핸드폰 번호를 입력해주세요</string>
    <string name="pl_phone_btn">인증 요청</string>
    <string name="pl_conf">인증번호를 입력해주세요</string>
    <string name="pl_conf_btn">인증 확인</string>
    <string name="pl_btn">학생 조회</string>

    <string name="mi_header">menu</string>
    <string name="mi_stu">학생 조회</string>
    <string name="mi_at">출결 관리</string>
    <string name="mi_par">학부모 검색</string>

    <string name="as_in">등 원</string>
    <string name="as_out">하 원</string>

    <string name="ip_hint">학생 이름을 입력해주세요</string>
    <string name="ip_btn">조회</string>
    <string name="ip_stu">학생</string>
    <string name="ip_par">학부모</string>

    <string name="is_phone">학부모 전화번호</string>
    <string name="is_btn">학생 추가</string>

    <string name="stu_name">학생 이름</string>
    <string name="stu_phone">학생 연락처</string>
    <string name="par_name">학부모 성함</string>
    <string name="par_phone">학부모 연락처</string>
    <string name="tea_phone">교사 연락처</string>
    <string name="reg_stu">등록하기</string>
    <string name="upd_btn_stu">등록하기</string>
    <string name="tea_name">담당 선생님</string>
    <string name="upd_stu">정보 수정</string>
    <string name="del_stu">학생 삭제</string>
    <string name="empty">정보 없음</string>
    <string name="at">출석 조회</string>


</resources>