<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Start">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/st_lay_height"
        android:layout_gravity="center"
        android:gravity="bottom"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/st_img_width"
            android:layout_height="@dimen/st_img_height"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/start_img"
            android:contentDescription="@string/start_img_description" />


        <ImageView
            android:layout_width="@dimen/st_header_width"
            android:layout_height="@dimen/st_header_height"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/start_header"
            android:contentDescription="@string/start_header_description"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/teacher"
            android:layout_width="@dimen/st_btn_width"
            android:layout_height="@dimen/st_btn_height"
            android:layout_marginTop="@dimen/margin_m"
            android:textSize="@dimen/text_size_s"
            android:layout_gravity="center"
            android:background="@drawable/btn_effect_navy"
            android:backgroundTint="@color/navy"
            android:fontFamily="@font/good"
            android:text="@string/start_btn_t"
            android:textAlignment="center"
            android:textColor="#FFFFFFFF"
          />


        <Button
            android:id="@+id/parents"
            android:layout_width="@dimen/st_btn_width"
            android:layout_height="@dimen/st_btn_height"
            android:layout_marginTop="@dimen/margin_b"
            android:textSize="@dimen/text_size_s"
            android:layout_gravity="center"
            android:background="@drawable/btn_effect_purple"
            android:backgroundTint="@color/purple"
            android:fontFamily="@font/good"
            android:text="@string/start_btn_p"
            android:textAlignment="center"
            android:textColor="@color/white"
          />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end">

        <ImageView
            android:layout_width="@dimen/st_credit_width"
            android:layout_height="@dimen/st_credit_height"
            android:layout_margin="@dimen/margin_s"
            android:layout_gravity="bottom"
            android:src="@drawable/start_credit"
            android:contentDescription="@string/start_credit_description"/>
    </LinearLayout>

</LinearLayout>