<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF"
    android:orientation="vertical"
    tools:context=".ParentLogin">


    <ImageButton
        android:id="@+id/back"
        android:layout_width="@dimen/back_btn_size"
        android:layout_height="@dimen/back_btn_size"
        android:layout_margin="@dimen/margin_s"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/btn_back" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/pl_lay_height"
        android:background="#FFFFFFFF"
        android:gravity="bottom"
        android:orientation="vertical">


        <ImageView

            android:layout_width="@dimen/pl_img_width"
            android:layout_height="@dimen/pl_img_height"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:src="@drawable/parent_login_img" />




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        >
        <ImageView
            android:layout_width="@dimen/pl_header_width"
            android:layout_height="@dimen/pl_header_height"
            android:layout_marginLeft="@dimen/pl_header_margin"
            android:scaleType="fitXY"
            android:src="@drawable/parent_login_header" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_s"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/btn_border_purple">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="@dimen/pl_text_width"
                android:layout_height="@dimen/pl_text_height"
                android:hint="@string/pl_phone"
                android:textColorHint="#3F51B5">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/parent_login_phone"
                    android:layout_width="@dimen/pl_text_width"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:backgroundTint="#9148C8" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button

                android:id="@+id/parent_login_send_validation"
                android:layout_width="@dimen/pl_mini_btn_width"
                android:layout_height="@dimen/pl_text_height"
                android:layout_marginTop="@dimen/m_margin_m"
                android:textSize="@dimen/text_size_s"
                android:backgroundTint="#9148C8"
                android:text="@string/pl_phone_btn"
                android:fontFamily="@font/good"
                android:textColor="@color/white"
               />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:theme="@style/EditText"
            >

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="@dimen/pl_text_width"
                android:layout_height="@dimen/pl_text_height"
                android:hint="@string/pl_conf"
                android:textColorHint="#3F51B5">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/parent_login_validation_code"
                    android:layout_width="@dimen/pl_text_width"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:backgroundTint="#9148C8" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/parent_login_validation"
                android:layout_width="@dimen/pl_mini_btn_width"
                android:layout_height="@dimen/pl_text_height"
                android:textSize="@dimen/text_size_s"
                android:backgroundTint="#9148C8"
                android:text="@string/pl_conf_btn"
                android:fontFamily="@font/good"
                android:textColor="@color/white"
               />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/parent_login_login_button"
            android:layout_width="@dimen/pl_btn_width"
            android:layout_height="@dimen/pl_btn_height"
            android:layout_marginTop="@dimen/margin_s"
            android:textSize="@dimen/text_size_s"
            android:fontFamily="@font/good"
            android:backgroundTint="#9148C8"
            android:text="@string/pl_btn"
            android:textAlignment="center"
            android:textColor="@color/white"
           />


    </LinearLayout>

</LinearLayout>
