<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF"
    android:orientation="vertical"
    tools:context=".TeacherLogin">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="@dimen/back_btn_size"
        android:layout_height="@dimen/back_btn_size"
        android:layout_margin="@dimen/margin_s"
        android:background="#00000000"
        android:scaleType="fitXY"
        android:src="@drawable/btn_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tl_lay_height"
        android:gravity="bottom"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/tl_img_width"
            android:layout_height="@dimen/tl_img_height"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:src="@drawable/teacher_login_img" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/tl_header_width"
                android:layout_height="@dimen/tl_header_height"
                android:layout_marginLeft="@dimen/tl_header_margin"
                android:src="@drawable/teacher_login_header" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_b"
                android:layout_gravity="center"
                android:background="@drawable/btn_border_navy"
                android:orientation="vertical"
            >

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="@dimen/tl_text_width"
                    android:layout_height="@dimen/tl_text_height"
                    android:layout_gravity="center"
                    android:hint="@string/tl_hint_id"
                    android:textColorHint="#3F51B5">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name"
                        android:layout_width="@dimen/tl_text_width"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/imcresoojin"
                        android:inputType="textWebEditText" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="@dimen/tl_text_width"
                    android:layout_height="@dimen/tl_text_height"
                    android:layout_gravity="center"
                    android:hint="@string/tl_hint_pass"
                    android:textColorHint="#3F51B5"
                    app:counterEnabled="true"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="@dimen/tl_text_width"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/imcresoojin"
                        android:inputType="textWebPassword" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="@dimen/tl_btn_width"
                android:layout_height="@dimen/tl_btn_height"
                android:layout_marginTop="@dimen/margin_b"
                android:layout_marginBottom="@dimen/margin_m"
                android:textSize="@dimen/text_size_s"
                android:layout_gravity="center"
                android:background="@drawable/btn_border_navy"
                android:backgroundTint="#002060"
                android:fontFamily="@font/good"
                android:text="@string/tl_btn"
                android:textAlignment="center"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/register"
                android:layout_width="@dimen/tl_reg_width"
                android:layout_height="@dimen/tl_reg_height"
                android:textSize="@dimen/text_size_s"
                android:layout_gravity="center"
                android:background="@drawable/btn_empty"
                android:fontFamily="@font/good"
                android:text="@string/tl_reg"
                android:textAlignment="center"
                android:textColor="#3F51B5"
               />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>
