<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".InquireParent">

    <ImageButton
        android:id="@+id/back5"
        android:layout_width="@dimen/back_btn_size"
        android:layout_height="@dimen/back_btn_size"
        android:layout_gravity="left"
        android:layout_margin="@dimen/margin_s"
        android:background="#00000000"
        android:scaleType="fitXY"
        android:src="@drawable/btn_back" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="@dimen/ip_header_width"
            android:layout_height="@dimen/ip_header_height"
            android:layout_marginRight="@dimen/margin_m"
            android:scaleType="fitXY"
            android:src="@drawable/inquire_parent_header" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    </LinearLayout>

    <View
        android:layout_width="@dimen/ip_view_width"
        android:layout_height="@dimen/view_height"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_s"
        android:layout_marginBottom="@dimen/margin"
        android:backgroundTint="@color/navy"
        android:background="@drawable/btn_border_navy" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btn_border_navy"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_m">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/ip_text_width"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_s"
                android:hint="@string/ip_hint"
                android:textColorHint="@color/text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_parent"
                    android:layout_width="@dimen/ip_text_width"
                    android:fontFamily="@font/imcresoojin"
                    android:layout_height="@dimen/ip_text_height"
                    android:inputType="textWebEditText"
                    android:layout_gravity="center" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:fontFamily="@font/good"
                android:id="@+id/search_btn"
                android:layout_width="@dimen/ip_btn_width"
                android:layout_height="@dimen/ip_btn_height"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_s"
                android:layout_marginRight="@dimen/margin_m"
                android:background="@drawable/btn_effect_navy"
                android:backgroundTint="@color/navy"
                android:text="@string/ip_btn"
                android:textColor="@color/white" />

        </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin"
                android:layout_gravity="center"
                android:background="@color/navy" />



        <LinearLayout
            android:layout_width="@dimen/ip_lay_width"
            android:layout_height="@dimen/ip_lay_height"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="@dimen/ip_lay_sub_width"
                android:layout_height="@dimen/ip_lay_height"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:fontFamily="@font/imcresoojin"
                    android:layout_width="@dimen/ip_column_width"
                    android:layout_height="@dimen/ip_column_height"
                    android:background="@drawable/btn_border_navy"
                    android:backgroundTint="@color/navy"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:text="@string/ip_stu"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_s" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/ip_lay_sub_width"
                android:layout_height="@dimen/ip_lay_height"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="@dimen/ip_column_width"
                    android:layout_height="@dimen/ip_column_height"
                    android:background="@drawable/btn_border_purple"
                    android:backgroundTint="@color/purple"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:text="@string/ip_par"
                    android:fontFamily="@font/imcresoojin"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_s" />
            </LinearLayout>
        </LinearLayout>

        <ScrollView
            android:layout_width="@dimen/ip_list_width"
            android:layout_height="@dimen/ip_list_height"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_m">

            <LinearLayout
                android:layout_width="@dimen/ip_list_width"
                android:layout_height="@dimen/ip_list_height"
                android:orientation="horizontal">

                <ListView
                    android:id="@+id/listView2"
                    android:layout_width="@dimen/ip_list_width"
                    android:layout_height="@dimen/ip_list_height" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <View
        android:layout_width="@dimen/ip_view_width"
        android:layout_height="@dimen/view_height"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin"
        android:backgroundTint="@color/navy"
        android:background="@drawable/btn_border_navy" />

</LinearLayout>